// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute balance endpoint single address - should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
        "balance": "842796652117371",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint with explicit minConfirmations - should return success  1`] = `
{
  "data": {
    "result": [
      {
        "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
        "balance": "15671674977708000",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute balance endpoint with multiple addresses - should return success  1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEF9FFcFbeCB6213E5903529c8457b6F61141140d",
        "balance": "842796652117371",
      },
      {
        "address": "0x6a1544F72A2A275715e8d5924e6D8A017F0e41ed",
        "balance": "1604497408893139674",
      },
    ],
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
